src/common.css
/* ... */
#loading {
    flex-flow: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    left: 0;
    top: auto;
    right: 0;
    bottom: 0;
    width: 100vw;
    max-width: 100vw;
    height: calc(100vh - 11rem);
    min-height: calc(100vh - 11rem);
    background: var(--nimiq-gray);
    z-index: 1;
}

#loading > .loading-spinner {
    margin-top: -11rem;
}

.loading #loading {
    display: flex;
}

.loading .page:target {
    pointer-events: none;
}

.page-footer > .loading-spinner {
    position: absolute;
    display: none;
    color: white;
    left: calc(50% - 3.375rem);
    margin-top: 3rem; /* 2rem button margin + 1 rem to center */
}

.password-box .loading-spinner {
    position: absolute;
    display: none;
    left: calc(50% - 3.375rem);
    bottom: calc(50% - 3.125rem);
}

.password-box.hide-input .loading-spinner {
    bottom: 3rem;  /* 2rem button margin + 1 rem to center */
}

body.loading .password-box.hide-input button,
body.loading .page-footer > .loading-spinner + button {
    color:transparent;
}

.password-box.hide-input .loading-spinner {
    color: white;
}

body.loading .password-box > *:not(.loading-spinner) {
    visibility: hidden
}

body.loading .page:target .password-box.hide-input > button {
    visibility: visible;
    z-index: 1;
}

body.loading .page:target .password-box > .loading-spinner,
body.loading .page:target .page-footer > .loading-spinner {
    display: flex;
    z-index: 1;
}

.loading-spinner .big-hex {
    stroke-dashoffset: -40.5;
    animation: loading-big-hex 4s cubic-bezier(0.76, 0.29, 0.29, 0.76) infinite;
}

.loading-spinner .small-hex {
    stroke-dashoffset: 13;
    animation: loading-small-hex 4s cubic-bezier(0.76, 0.29, 0.29, 0.76) infinite;
}

@keyframes loading-big-hex {
    0%   { stroke-dashoffset: -40.5 }
    17%  { stroke-dashoffset: -15.08 }
    33%  { stroke-dashoffset: 10.33 }
    50%  { stroke-dashoffset: 35.75 }
    67%  { stroke-dashoffset: 61.17 }
    83%  { stroke-dashoffset: 86.58 }
    100% { stroke-dashoffset: 112 }
}

@keyframes loading-small-hex {
    0%   { stroke-dashoffset: 13 }
    17%  { stroke-dashoffset: 38.42 }
    33%  { stroke-dashoffset: 63.84 }
    50%  { stroke-dashoffset: 89.25 }
    67%  { stroke-dashoffset: 114.66 }
    83%  { stroke-dashoffset: 140.08 }
    100% { stroke-dashoffset: 165.5 }
}

.identicon img {
    height: 100%;
    width: 100%;
}

.nim-symbol::before {
    content: "NIM";
}

.address {
    font-family: "Fira Mono", "Andale Mono", monospace;
    font-size: 1.625rem;
    line-height: 2rem;
    word-spacing: -0.2em;
    opacity: 0.7;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow-x: hidden;
    max-width: 100%;
}

.global-close {
    position: relative;
    z-index: 3;
    margin-top: 8rem;
    margin-bottom: 5rem;
    background: transparent !important;
    opacity: 0.4;
    font-size: 2rem;
    transition: color .3s var(--nimiq-ease), opacity .3s var(--nimiq-ease);
}

.global-close:hover,
.global-close:focus {
    color: var(--nimiq-light-blue);
    opacity: 1;
}

.global-close .nq-icon {
    vertical-align: top;
    width: 1.375rem;
    height: 1.125rem;
    margin-right: 0.25rem;
    margin-top: 1.125rem;
    transition: transform .3s var(--nimiq-ease);
}

.global-close:hover .nq-icon,
.global-close:focus .nq-icon {
    transform: translate3D(-0.25rem, 0, 0);
}

.actionbox {
    width: 100%;
    padding: 1.25rem;
    border-radius: 0.625rem;
    text-align: center;
}

.actionbox h2 {
    text-transform: uppercase;
    font-size: 1.75rem;
    font-weight: bold;
    letter-spacing: 0.107em;
    line-height: 1.5rem;
    margin-top: 1rem;
    margin-bottom: 2rem;
}

.actionbox ::-moz-selection {
    background: rgba(31, 35, 72, 0.5); /* Gecko Browsers */
}

.actionbox ::selection {
    background: rgba(31, 35, 72, 0.5);
}

#app {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
    padding: 0 1rem;
    width: 100%;
}

#error {
    display: flex;
    justify-content: start;
    box-shadow: none;
}

.skip {
    display: block;
    font-size: 1.75rem;
    font-weight: 600;
    line-height: 2;
    text-align: center;
    color: inherit;
    cursor: pointer;
    margin: -2rem auto 0;
    padding: 0 2rem;
    opacity: 0.7;
    transition: opacity .3s var(--nimiq-ease);
}

.skip .nq-icon  {
    height: 1.25rem;
    width: 1.25rem;
    transition: transform .3s var(--nimiq-ease);
    vertical-align: middle;
}

.skip:hover,
.skip:focus {
    outline: none;
    opacity: 1;
    text-decoration: none;
}

.skip:hover .nq-icon,
.skip:focus .nq-icon {
    transform: translate3D(-0.25rem, 0, 0);
}

.nq-card > .skip {
    margin-top: -4rem;
    margin-bottom: 1rem;
}

/* Mobile Layout */

@media (max-width: 450px) {
    .header-top {
        padding: 2rem;
    }

    #app {
        padding: 0;
        justify-content: flex-end;
    }

    .global-close {
        position: absolute;
        right: 1rem;
        top: 2rem;
        margin: 0;
    }

    #rotation-container + .global-close {
        top: -5.5rem;
    }

    .page {
        max-width: 100%;
    }

    .nq-card {
        margin: 0;
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
    }
}

